# NetzwerkTech-AI

NetzwerkTech-AI/netzwerk-technology/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
NetzwerkTech-AI/netzwerk-technology/examples/: quickstart.py
NetzwerkTech-AI/netzwerk-technology/src/: __init__.py
NetzwerkTech-AI/netzwerk-technology/src/models/: anomaly_detector.py  topology_mapper.py
NetzwerkTech-AI/netzwerk-technology/tests/: test_models.py
